force-app/main/default/objects/Schedulable__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Class that will be scheduled to run at a certain frequency.</description>
    <inlineHelpText>Class that will be scheduled to run at a certain frequency.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>