force-app/main/default/objects/Schedulable__c/fields/Last_Time_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Run__c</fullName>
    <description>Last time the job was run.</description>
    <inlineHelpText>Last time the job was run.</inlineHelpText>
    <label>Last Time Run</label>
    <type>DateTime</type>
</CustomField>